add mock test controller